--- a/Daredevil/Daredevil.html
+++ b/Daredevil/Daredevil.html
@@ -8,18 +8,9 @@
 </head>
 
 <body>
-<h2>Daredevil</h2>
-<img src="Daredevil001.jpg"> 
-<img src="Daredevil001Page1.jpg"><br>
-Series: on-going<br>
-Publisher: Marvel<br>
+<img src="Daredevil001.jpg"><br>
+381 issues 1966-1998, 132 issues 1998-2011, 37 issues 2011-2014, 20 issues 2014-2015, 46 issues 2016-2019 by Marvel<br>
 <p>
-Daredevil was created by writer-editor Stan Lee and artist Bill Everett, with an unspecified amount of input from Jack Kirby. The character first appeared in Daredevil #1 (April 1964). Writer/artist Frank Miller's influential tenure on the title in the early 1980s cemented the character as a popular and influential part of the Marvel Universe. Daredevil is commonly known by such epithets as the "Man Without Fear" and the "Devil of Hell's Kitchen".
-</p><p>
-Daredevil's origin story relates that while living in the historically gritty or crime-ridden, working class Irish-American neighborhood of Hell's Kitchen in New York City, Matthew Michael Murdock is blinded by a radioactive substance that falls from a truck after he pushes a man to safety from the oncoming vehicle. While he no longer can see, the radioactive exposure heightens his remaining senses beyond normal human ability and gives him a "radar sense". 
-</p><p>
-His father, a boxer named Jack Murdock, supports him as he grows up, though Jack is later killed by gangsters after refusing to throw a fight. After donning a yellow and dark red costume (later all dark red), Matt seeks out revenge against his father's killers as the superhero Daredevil, fighting against his many enemies, including Bullseye and Kingpin. He also becomes a lawyer after having graduated from law school with his best friend and roommate, Franklin "Foggy" Nelson.
-</p><p>
 
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor"></div></div>
@@ -28,6 +19,7 @@ His father, a boxer named Jack Murdock, supports him as he grows up, though Jack
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="Daredevil001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Daredevil001Page1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Daredevil002.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Daredevil003.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Daredevil004.jpg"></div>
@@ -222,9 +214,15 @@ His father, a boxer named Jack Murdock, supports him as he grows up, though Jack
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-</div>
+</div></div>
 
+</p><p>
+Daredevil was created by writer-editor Stan Lee and artist Bill Everett, with an unspecified amount of input from Jack Kirby. The character first appeared in Daredevil #1 (April 1964). Writer/artist Frank Miller's influential tenure on the title in the early 1980s cemented the character as a popular and influential part of the Marvel Universe. Daredevil is commonly known by such epithets as the "Man Without Fear" and the "Devil of Hell's Kitchen".
+</p><p>
+Daredevil's origin story relates that while living in the historically gritty or crime-ridden, working class Irish-American neighborhood of Hell's Kitchen in New York City, Matthew Michael Murdock is blinded by a radioactive substance that falls from a truck after he pushes a man to safety from the oncoming vehicle. While he no longer can see, the radioactive exposure heightens his remaining senses beyond normal human ability and gives him a "radar sense". 
+</p><p>
+His father, a boxer named Jack Murdock, supports him as he grows up, though Jack is later killed by gangsters after refusing to throw a fight. After donning a yellow and dark red costume (later all dark red), Matt seeks out revenge against his father's killers as the superhero Daredevil, fighting against his many enemies, including Bullseye and Kingpin. He also becomes a lawyer after having graduated from law school with his best friend and roommate, Franklin "Foggy" Nelson.
+</p><p>
 <ul>
 <li><a href="Daredevil.html">Daredevil #1</a></li>
 <li><a href="Daredevil002.html">Daredevil #2</a></li>
