--- a/Alias/alias.html
+++ b/Alias/alias.html
@@ -2,19 +2,59 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Alias</title>
 </head>
 
 <body>
-<h2>Alias</h2>
-<img src="AliasOmnibus.jpg"> <br>
-Series: 28 issue on going, 1 Omnibus collection in 2006<br>
+<img src="AliasOmnibus.jpg"> <img src="JessicaJones.jpg"><br>
+28 issues 2001-2004, 1 TPB 2006 MAX (Marvel), 4 issues 2003-2004 Marvel<br>
 Illustrator: Michael Gaydos<br>
 Writer: Brian Michael Bendis<br>
-Publisher: 2001-2006 MAX (Marvel)<br>
 <p>
-About: Alias is about Jessica Jones, a former costumed superhero named Jewel who left that life behind to become a private investigator. The running thread is Jessica's character development, as the layers of her past and personality are revealed to the reader while, simultaneously, she tries to come to terms with them herself.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Alias01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alias28.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Alias is about Jessica Jones, a former costumed superhero named Jewel who left that life behind to become a private investigator. The running thread is Jessica's character development, as the layers of her past and personality are revealed to the reader while, simultaneously, she tries to come to terms with them herself.
 </p><p>
 Characters from the series moved to Bendis' subsequent series The Pulse.
 Alias became the basis of the first season of the Netflix series Jessica Jones, which premiered in 2015.
