--- a/kb.html
+++ b/kb.html
@@ -912,6 +912,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Alias:</td>
+<td>1990</td>
+<td>Now</td>
+<td><a href="AliasNow/AliasNow.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Alice in Sunderland: An Entertainment</td>
 <td>2007</td>
 <td>Dark Horse</td>
