--- a/kb.html
+++ b/kb.html
@@ -915,7 +915,7 @@ Creative Knowledgebase<br>
 <td>Alias:</td>
 <td>1990</td>
 <td>Now</td>
-<td><a href="AliasNow/AliasNow.html">Details</a></td>
+<td><a href="AliasNow/A-BabiesliasNow.html">Details</a></td>
 </tr>
 
 <tr>
