--- a/Alien3/Alien3.html
+++ b/Alien3/Alien3.html
@@ -7,15 +7,10 @@
 </head>
 
 <body>
-<h2>Alien 3</h2>
-<img src="Alien3_1.jpg">
-<img src="Alien3_2.jpg">
-<img src="Alien3_3.jpg"> <br>
-Series: 3 issue movie adaptation<br>
-Cover: Arthur Suydam<br>
-Illustrator: Christopher Taylor<br>
-Writer: Steven Grant<br>
-Publisher: 1992 Dark Horse<br>
+<img src="Alien3_1.jpg" title="cover by Arthur Suydam">
+<img src="Alien3_2.jpg" title="cover by Arthur Suydam">
+<img src="Alien3_3.jpg" title="cover by Arthur Suydam"> <br>
+3 issue movie adaptation in 1992 by Dark Horse
 <p>
 In 2179 a fire starts aboard the Colonial Marine spaceship Sulaco. The computer launches an escape pod containing Ellen Ripley, the young girl Newt, Hicks, and the damaged android Bishop; all four are in cryonic stasis. Scans of the crew's cryotubes show a queen facehugger attached to one member. 
 </p><p>
