--- a/kb.html
+++ b/kb.html
@@ -7035,6 +7035,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>James Stokoe</td>
+<td>1985</td>
+<td>Creator</td>
+<td><a href="JamesStokoe/JamesStokoe.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jamie Hewlett</td>
 <td>1968</td>
 <td>Creator</td>
