--- a/AliensDeadOrbit/AliensDeadOrbit.html
+++ b/AliensDeadOrbit/AliensDeadOrbit.html
@@ -2,18 +2,38 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Aliens Dead Orbit</title>
 </head>
 
 <body>
-<h2>Aliens Dead Orbit</h2>
-<img src="AliensDeadOrbit.jpg"> <br>
-Creator: James Stokoe<br>
-Series: one-shot Graphic Novel<br>
-Publisher: 2017 Dark Horse<br>
+<img src="AliensDeadOrbit.jpg" title="by James Stokoe"> <br>
+4 issues, 1 TPB in 2017 by Dark Horse
 <p>
-Like fellow precision artists Geof Darrow and the late, great Bernie Wrightson, James Stokoe doesn’t stop drawing until nearly every millimeter of canvas is shaded, hatched and/or stylized. As seen in Orc Stain and his Godzilla runs, a microscope is required to appreciate his images in their hyper-articulate, chiseled depth. 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AliensDeadOrbit.jpg" title="by James Stokoe"></div>
+<div class="mySlides" style="text-align: center;"><img src="AliensDeadOrbit1.jpg" title="by James Stokoe"></div>
+<div class="mySlides" style="text-align: center;"><img src="AliensDeadOrbit1b.jpg" title="by James Stokoe"></div>
+<div class="mySlides" style="text-align: center;"><img src="AliensDeadOrbit2.jpg" title="by James Stokoe"></div>
+<div class="mySlides" style="text-align: center;"><img src="AliensDeadOrbit3.jpg" title="by James Stokoe"></div>
+<div class="mySlides" style="text-align: center;"><img src="AliensDeadOrbit4.jpg" title="by James Stokoe"></div>
+<div class="mySlides" style="text-align: center;"><img src="AliensDeadOrbit5.jpg" title="by James Stokoe"></div>
+<div class="mySlides" style="text-align: center;"><img src="AliensDeadOrbit6.jpg" title="by James Stokoe"></div>
+<div class="mySlides" style="text-align: center;"><img src="AliensDeadOrbit7.jpg" title="by James Stokoe"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Like fellow precision artists Geof Darrow and the late, great Bernie Wrightson, <a href="../JamesStokoe/JamesStokoe.html">James Stokoe</a> doesn’t stop drawing until nearly every millimeter of canvas is shaded, hatched and/or stylized. As seen in Orc Stain and his Godzilla runs, a microscope is required to appreciate his images in their hyper-articulate, chiseled depth. 
 </p><p>
 In Aliens: Dead Orbit, Stokoe uses his talent to shape a cosmic graveyard of space junk, dwarfing in scope and mind-numbingly vast. Zoom in tightly enough, and one lone space engineer sits stranded in the wasteland. Though this miniseries utilizes one of the most iconic horror franchises in film history, it builds on its foundation by imposing a sheer sense of scale and futility. Yes, protagonist Wascylewski matches wits with Xenomorphs and facehuggers, but Stokoe’s art begs him what’s the point? in a celestial vacuum of hope, light years from any aid. Aliens: Dead Orbit is a Venn diagram of awe, depression and the ghost of salvation.
 </p>
