--- a/Joker/joker.html
+++ b/Joker/joker.html
@@ -2,20 +2,50 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
-<title>Joker</title>
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
+<title>Joker Comics</title>
 </head>
 
 <body>
-<h2>Joker Comics, Adventures Into Terror</h2>
-<img src="joker001.jpg"> <img src="adventuresintoterror43.jpg"> <img src="adventuresintoterror3.jpg"><br>
-Series: 1-42, 43-44, 3-31<br>
-Illustrator: <br>
-Writer: <br>
-Publisher: 1942-1954 Atlas<br>
+<img src="joker001.jpg"><br>
+5 issues 1941 by Atlas<br>
+42 issues 1942-1950, 30 issues 1960-1967, 27 issues 1969-1976 by Marvel<br>
 <p>
-About: Started in 1942 as Joker Comics (#1-42), then became Adventures into Terror #43 and #44 then restarted the numbering with #3.<br>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
 
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="joker001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker013.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker014.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker016.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker017.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker018.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker019.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="joker020.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Humor variety.
 </p>
 </body>
 </html>
