--- a/kb.html
+++ b/kb.html
@@ -535,7 +535,7 @@ Creative Knowledgebase<br>
 <td>Adventures Into Terror</td>
 <td>1951</td>
 <td>Marvel</td>
-<td><a href="Joker/joker.html">Details</a></td>
+<td><a href="AdventuresIntoTerror/AdventuresIntoTerror.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7169,8 +7169,8 @@ Creative Knowledgebase<br>
 
 <tr>
 <td>Joker Comics</td>
-<td>1942</td>
-<td>Marvel</td>
+<td>1941</td>
+<td>Comedy Publications</td>
 <td><a href="Joker/joker.html">Details</a></td>
 </tr>
 
