--- a/kb.html
+++ b/kb.html
@@ -7170,7 +7170,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Joker Comics</td>
 <td>1941</td>
-<td>Comedy Publications</td>
+<td>Atlas</td>
 <td><a href="Joker/joker.html">Details</a></td>
 </tr>
 
