--- a/AdventuresOfCaptainAmerica/adventuresofcaptamerica.html
+++ b/AdventuresOfCaptainAmerica/adventuresofcaptamerica.html
@@ -7,12 +7,8 @@
 </head>
 
 <body>
-<h2>Adventures of Captain America</h2>
 <img src="adventuresofcaptamerica.jpg"> <br>
-Series: 4 issue mini series<br>
-Illustrator: Kevin Maguire<br>
-Writer: Fabian Nicieza<br>
-Publisher: 1991 Marvel <br>
+4 issues 1991 Marvel
 <p>
 About: The origin of Captain America is retold. <br>
 </p><p>
