--- a/AdventuresOfCyclopsAndPhoenix/AdventuresCyclopsPhoenix.html
+++ b/AdventuresOfCyclopsAndPhoenix/AdventuresCyclopsPhoenix.html
@@ -7,12 +7,8 @@
 </head>
 
 <body>
-<h2>Adventures of Cyclops and Phoenix</h2>
 <img src="AdventuresCyclopsPhoenix01.jpg"> <br>
-Series: 4 issue mini series <br>
-Illustrator: Gene Ha<br>
-Writer: Scott Lobdell<br>
-Publisher: 1994 Marvel<br>
+4 issues 1994 Marvel <br>
 <p>
 About: The Adventures of Cyclops and Phoenix was a four-issue comic book mini-series that revealed much of the back story for the character Cable, much of which had been implied before, but was still shrouded in mystery and uncertainty.
 </p><p>
