--- a/AdventuresOfSnakePilssken/adventuresofsnakepilssken.html
+++ b/AdventuresOfSnakePilssken/adventuresofsnakepilssken.html
@@ -7,16 +7,13 @@
 </head>
 
 <body>
-<h2>Adventures of Snake Pilssken</h2>
 <img src="adventuresofsnakepilssken.jpg"> <br>
-Series: one-shot<br>
+1 issue in 1997 by Marvel<br>
 Illustrator: Dan Brereton (cover), Rod Whigham<br>
 Writer: Len Kaminski<br>
-Publisher: 1997 Marvel<br>
+
 <p>
-About: The story takes place sometime between Escape from New York and before his famous Cleveland escape mentioned in Escape from L.A.
-</p><p>
-Story: Snake has robbed Atlanta's Center for Disease Control of some engineered metaviruses and is looking for buyers in Chicago. Finding himself in a deal that's really a set-up, he makes his getaway and exacts revenge on the buyer for ratting him out to the United States Police Force. 
+The story takes place sometime between Escape from New York and before his famous Cleveland escape mentioned in Escape from L.A. Snake has robbed Atlanta's Center for Disease Control of some engineered metaviruses and is looking for buyers in Chicago. Finding himself in a deal that's really a set-up, he makes his getaway and exacts revenge on the buyer for ratting him out to the United States Police Force. 
 </p><p>
 In the meantime, a government lab has built a robot called A.T.A.C.S. (Autonomous Tracking And Combat System) that can catch criminals by imprinting their personalities upon its program in order to predict and anticipate a specific criminal's every move. The robot's first test subject is America's public enemy number one, Snake Plissken. 
 </p><p>
