--- a/AdventuresOfTheThing/AdventuresOfTheThing.html
+++ b/AdventuresOfTheThing/AdventuresOfTheThing.html
@@ -2,19 +2,33 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>The Adventures of the Thing</title>
 </head>
 
 <body>
-<h2>The Adventures of the Thing</h2>
-<img src="AdventuresOfTheThing.jpg"> <br>
-Series: 4 issue mini series <br>
-Illustrator: Sam Kieth, John Byrne<br>
-Writer: John Byrne<br>
-Publisher: 1992 Marvel<br>
+<img src="AdventuresOfTheThing1.jpg"> <br>
+4 issues in 1992 by Marvel <br>
 <p>
-About: Team-up of the Thing and himself in a time-travel story.  Reprint of Marvel Two-In-One (1974 series) #50 with new cover.<br>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AdventuresOfTheThing1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventuresOfTheThing2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventuresOfTheThing3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventuresOfTheThing4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Issues #1 Team-up of the Thing and himself in a time-travel story. Reprint of Marvel Two-In-One (1974 series) #50 with new cover.<br>
 </p>
 </body>
 </html>
