--- a/SuperheroGirl/superherogirl.html
+++ b/SuperheroGirl/superherogirl.html
@@ -7,16 +7,15 @@
 </head>
 
 <body>
-<h2>Superhero Girl</h2>
 <img src="superherogirl.jpg"> <br>
-Series: on-shot humor<br>
-Illustrator: Faith Erin Hicks<br>
-Writer: Faith Erin Hicks<br>
-Publisher: 2013 Dark Horse<br>
+1 issues in 2013 by Dark Horse<br>
+Created by Faith Erin Hicks<br>
+
 <p>
 About: What if you can leap tall buildings and defeat alien monsters with your bare hands, but you buy your capes at secondhand stores and have a weakness for kittens? 
 </p><p>
-Cartoonist Faith Erin Hicks brings charming humor to the trials and tribulations of a young, female superhero, battling monsters both supernatural and mundane in an all-too-ordinary world. A lighthearted twist on the superhero genre.</p>
+Cartoonist Faith Erin Hicks brings charming humor to the trials and tribulations of a young, female superhero, battling monsters both supernatural and mundane in an all-too-ordinary world. A lighthearted twist on the superhero genre.
+</p>
 
 </body>
 </html>
