--- a/PinkyLee/pinkylee.html
+++ b/PinkyLee/pinkylee.html
@@ -3,16 +3,14 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="../ZimStyles.css">
-<title>Pinky Lee</title>
+<title>The Adventures of Pinky Lee</title>
 </head>
 
 <body>
-<h2>Pinky Lee</h2>
 <img src="PinkyLee.jpg"> <br>
-Series: 5 issue series <br>
+5 issues 1955 by Atlas <br>
 Illustrator: Morris Weiss<br>
 Writer: Stan Lee<br>
-Publisher: 1955 Atlas<br>
 <p>
 About: Comic adaptation of the American burlesque comic and host of the children's television program The Pinky Lee Show in the early 1950s.<br>
 </p>
