--- a/AdventuresOnThePOTA/adventuresonthepota.html
+++ b/AdventuresOnThePOTA/adventuresonthepota.html
@@ -2,22 +2,43 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Adventures On The Planet Of The Apes</title>
 </head>
 
 <body>
-<h2>Adventures On The Planet Of The Apes</h2>
-<img src="adventuresonthepota.jpg"> <br>
-Series: 11 issue mini series movie adaptations<br>
-Illustrator: George Tuska<br>
-Writer: Doug Moench<br>
-Publisher: 1975 Marvel <br>
+<img src="adventuresonthepota1.jpg"> <br>
+11 issues 1975 by Marvel<br>
+Illustrator: George Tuska, writer: Doug Moench<br>
 <p>
-About: Movie adaptations of Planet of the Apes issues #1-6, then the movie sequal Beneath the Planet of the Apes issues #7-11.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="adventuresonthepota1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventuresonthepota2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventuresonthepota3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventuresonthepota4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventuresonthepota5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventuresonthepota6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventuresonthepota7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventuresonthepota8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventuresonthepota9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventuresonthepota10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="adventuresonthepota11.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-Story:<ul> 
-<li>Planet of the Apes: Astronauts Taylor, Landon and Dodge are in deep hibernation when their spaceship crashes in a lake on an unknown planet after a long near-light speed voyage, during which, due to time dilation, the crew ages only 18 months.
+Movie adaptation of Planet of the Apes issues #1-6, then the movie sequal Beneath the Planet of the Apes issues #7-11.
+</p><p>
+Planet of the Apes: Astronauts Taylor, Landon and Dodge are in deep hibernation when their spaceship crashes in a lake on an unknown planet after a long near-light speed voyage, during which, due to time dilation, the crew ages only 18 months.
 </p><p>
 Although the planet appears desolate at first, the surviving crew members stumble upon a society in which apes have evolved into creatures with human-like intelligence and speech. The apes have assumed the role of the dominant species and humans are mute creatures wearing animal skins.
 </p><p>
