--- a/AeonFlux/aeonflux.html
+++ b/AeonFlux/aeonflux.html
@@ -2,19 +2,43 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Aeon Flux</title>
 </head>
 
 <body>
-<h2>Aeon Flux</h2>
-<img src="aeonflux001.jpg"> <img src="aeonflux002.jpg"><br> <img src="aeonflux003.jpg"> <img src="aeonflux004.jpg"><br>
-Series: 4 issue mini series<br>
-Publisher: 2005 Dark Horse</a> <br>
+<img src="AeonFluxTV.jpg"><br>
+Animated TV series from 1991-1995. 1 Movie in 2005. 4 issues in 2005 by Dark Horse<br>
+Created by Peter Chung
 <p>
-About: Reintroducing the cult-classic action heroine best known for her animated adventures on MTV, this series will pave the way for her big-screen debut in this fall's blockbuster, live- action adaptation starring Charlize Theron. This four-issue miniseries will lay the foundation for events in the film, with all of the fast-paced action and intriguing conceptual sci-fi of the original cartoon.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AeonFluxTV.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AeonFluxMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="aeonflux001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="aeonflux002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="aeonflux003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="aeonflux004.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
 </p><p>
-Story:Four hundred years in the future, the last of humanity will live behind the protective walls of Bregna, an idyllic utopia built to shelter them from the deadly jungle growing beyond. Life in Bregna is perfect, or as perfect as the government can make the people believe. But not everyone is fooled by their mood-altering propaganda--a small band of freedom fighters wish to see things change, and they just might manage to pull off this impossible dream with the help of their top secret agent, the sexy, deadly Aeon Flux.
+Aeon Flux is an American avant-garde science fiction animated television series that aired on MTV November 30, 1991, until October 10, 1995, with film, comic book, and video game adaptations following thereafter. It premiered on MTV's Liquid Television experimental animation show, as a six-part serial of short films, followed in 1992 by five individual short episodes. In 1995, a season of ten half-hour episodes aired as a stand-alone series.
+</p><p>
+The live-action movie Aeon Flux, loosely based upon the series and starring Charlize Theron, was released in theaters on December 2, 2005, preceded in November of that year by a tie-in video game of the same name based mostly on the movie but containing some elements of the original TV series.
+</p><p>
+Reintroducing the cult-classic action heroine best known for her animated adventures on MTV, the Dark Horse series will pave the way for her big-screen debut in this fall's blockbuster, live- action adaptation starring Charlize Theron. This four-issue miniseries will lay the foundation for events in the film, with all of the fast-paced action and intriguing conceptual sci-fi of the original cartoon.
+</p><p>
+Four hundred years in the future, the last of humanity will live behind the protective walls of Bregna, an idyllic utopia built to shelter them from the deadly jungle growing beyond. Life in Bregna is perfect, or as perfect as the government can make the people believe. But not everyone is fooled by their mood-altering propaganda--a small band of freedom fighters wish to see things change, and they just might manage to pull off this impossible dream with the help of their top secret agent, the sexy, deadly Aeon Flux.
 </p><p>
 As Bregnan authorities prepare a new weapon to use against the jungle pounding at their walls, Aeon prepares to turn their plans against them. But this time she is not alone--she has been instructed to train a new agent, a fiery young woman named Sithandra, who may not be all that she appears to be.
 </p>
