--- a/AgeOfApocalypse/AgeOfApocalypse.html
+++ b/AgeOfApocalypse/AgeOfApocalypse.html
@@ -7,17 +7,13 @@
 </head>
 
 <body>
-<h2>Age Of Apocalypse</h2>
 <img src="AgeOfApocalypse2012_001.jpg"> 
 <img src="AgeOfApocalypse2015_001.jpg">
 <img src="AgeOfApocalypseTheChosen001.jpg">
 <img src="DawnAgeOfApocalypse.jpg"><br>
-Series: 1995-current in various forms.<br>
-Illustrator: various<br>
-Writer: various<br>
-Publisher: 1995 Marvel<br>
+1995 by Marvel<br>
 <p>
-About: This whole mess started in 1995, it is a comic book crossover storyline published in the X-Men franchise. It spans different years since 1995 and so far has not stopped and it getting worse now that the movie story line is getting into it. Because it is such a stupid mess I'm only going to touch on it in this one page.
+This whole mess is a comic book crossover storyline published in the X-Men franchise. It spans different years since 1995 and so far has not stopped and it getting worse now that the movie story line is getting into it. Because it is such a stupid mess I'm only going to touch on it in this one page.
 </p><p>
 Officially the Age of Apocalypse briefly replaced the universe of Earth-616 and had ramifications in the main Marvel Comics universe when the original timeline was restored. It was later retconned (reto-actively connected) as having occurred in the alternate universe of Earth-295. 
 </p><p>
