--- a/AirRaiders/airraiders.html
+++ b/AirRaiders/airraiders.html
@@ -7,16 +7,14 @@
 </head>
 
 <body>
-<h2>Air Raiders</h2>
 <img src="airraiders1.jpg"> 
 <img src="airraiders2.jpg">
 <img src="airraiders3.jpg">
 <img src="airraiders4.jpg">
 <img src="airraiders5.jpg"><br>
-Series: On going, 5 issues.<br>
+5 issues 1987-1988 by Marvel<br>
 Illustrator: Kelley Jones<br>
 Writer: Howard Mackie<br>
-Publisher: 1987-1988 Marvel<br>
 <p>
 Issue #1: On the planet Airlandia, air is more valuable than gold and it's the Air Raiders battling evil ruler Aerozar and his Tyrants of Wind. In this issue, Rokk stuggles with the question of whether or not the Air Raiders have the right to let a village die even if it is for the greater good and will help in the long run in the war in "Sins of the Father."  
 </p><p>
