--- a/Alabaster/alabaster.html
+++ b/Alabaster/alabaster.html
@@ -2,22 +2,42 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
-<title>Alabaster: The Good, The Bad, And The Bird</title>
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
+<title>Alabaster</title>
 </head>
 
 <body>
-<h2>Alabaster: The Good, The Bad, And The Bird</h2>
-<img src="Alabaster001.jpg">
-<img src="Alabaster005.jpg"> <br>
-Series: 5 issue mini series<br>
-Illustrator: Daniel Warren Johnson<br>
-Cover: Greg Ruth<br>
-Writer: Caitlin R. Kiernan<br>
-Publisher: 2015 Dark Horse<br>
-Awards: the Bram Stoker Award
+<img src="Alabaster1.jpg"> <br>
+5 issues "Wolves" 2012, 5 issues "The Good, The Bad, And The Bird" 2015, Dark Horse.<br>
+Winner of the Bram Stoker Award
 <p>
-#1 A new evil haunts the sun-scorched back roads and ghost towns of the American South—murderous twins who command a legion of ghouls. Once again, Dancy Flammarion must face down demons: both those who walk the world unchallenged and those in her own shattered mind.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Alabaster1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alabaster2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alabaster3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alabaster4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alabaster5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlabasterGBB1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlabasterGBB2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlabasterGBB3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlabasterGBB4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlabasterGBB5.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+"Wolves". Dancy Flammarion may look like a frail teenage girl, but her journey through the swamps and byways of the American South brings her into battle with werewolves, monsters, and grotesque secrets, armed only with a knife and a mission to destroy the deadly creatures that lurk in shadow. 
+</p><p>
+"The Good, The Bad, And The Bird". A new evil haunts the sun-scorched back roads and ghost towns of the American South—murderous twins who command a legion of ghouls. Once again, Dancy Flammarion must face down demons: both those who walk the world unchallenged and those in her own shattered mind.
 </p><p>
 #2 Our deadly, psychotic, bloodthirsty hero is dead. Who will save us now?
 Maisie makes a meager living conning the bereaved, even as she still mourns the loss of her friend and lover Dancy. But a pair of twisted bounty-hunting twins are planning to enact a mysterious occult ritual, and Maisie may soon find herself confronting a ghost from her own past.
