--- a/AllSurprise/AllSurprise.html
+++ b/AllSurprise/AllSurprise.html
@@ -2,20 +2,41 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>All Surprise Comics</title>
 </head>
 
 <body>
-<h2>All Surprise Comics</h2>
 <img src="AllSurprise001.jpg"> <br>
-Series: <br>
-Illustrator: <br>
-Writer: <br>
-Publisher: 1943 Chipiden (Marvel)<br>
+12 issues 1943-1946 by Chipiden (Marvel)<br>
 <p>
-About: Haven't been able to find anything else about this, except that Chipiden derives from the first names of publisher Martin Goodman's children, Chip (Charles) and Iden.  Martin Goodman founding the company that would later become Marvel Comics.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
 
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AllSurprise001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllSurprise002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllSurprise003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllSurprise004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllSurprise005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllSurprise006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllSurprise007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllSurprise008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllSurprise009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllSurprise010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllSurprise011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllSurprise012.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Haven't been able to find much about this anthropomorphic-funny animal series. Chipiden derives from the first names of publisher Martin Goodman's children, Chip (Charles) and Iden.  Martin Goodman founding the company that would later become Marvel Comics.
 </p>
 </body>
 </html>
