--- a/AllTeen/AllTeen.html
+++ b/AllTeen/AllTeen.html
@@ -2,20 +2,39 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>All Teen</title>
 </head>
 
 <body>
-<h2>All Teen</h2>
 <img src="AllTeen.jpg"> <br>
-Series: on-going <br>
-Illustrator: Frank Carin<br>
-Writer: Stan Lee<br>
-Publisher: 1947 Atlas (Marvel)<br>
+1 issue (#20) in 1947, then 15 issues as "Teen" (#21 - #35) by Atlas (Marvel)<br>
 <p>
-About: humor comic. Not much is known, this issue with cover #20 is the earliest example I could find.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
 
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AllTeen.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Teen22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Teen23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Teen24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Teen25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Teen26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Teen27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Teen28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Teen29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Teen30.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Humor comic starring Patsy Walker who becomes <a href="../Hellcat/Hellcat.html">Hellcat</a> in 1976 and features as a supporting character in the Netflix TV series <a href="../Alias/Alias.html">Jessica Jones</a> in 2018. The numbering continues from <a href="../AllWinners1941/AllWinners1941.html">All-Winners Comics</a> (Marvel, 1941 series) #19.
 </p>
 </body>
 </html>
