--- a/kb.html
+++ b/kb.html
@@ -804,8 +804,8 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
-<td>Alabaster: the Good, the Bad, and the Bird</td>
-<td>2015</td>
+<td>Alabaster</td>
+<td>2012</td>
 <td>Dark Horse</td>
 <td><a href="Alabaster/alabaster.html">Details</a></td>
 </tr>
@@ -12305,6 +12305,13 @@ Creative Knowledgebase<br>
 <td>1982</td>
 <td>Marvel</td>
 <td><a href="TeamAmerica/TeamAmerica.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Teen Comics</td>
+<td>1947</td>
+<td>Atlas</td>
+<td><a href="AllTeen/AllTeen.html">Details</a></td>
 </tr>
 
 <tr>
