--- a/JamesStokoe/JamesStokoe.html
+++ b/JamesStokoe/JamesStokoe.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="JamesStokoe00.jpg"> <br>
+<img src="JamesStokoe01.jpg"> <br>
 
 <p>
 <div class="row"><div class="column">
@@ -19,7 +19,6 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="JamesStokoe00.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JamesStokoe01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JamesStokoe02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JamesStokoe03.jpg"></div>
@@ -49,7 +48,7 @@ Image Comics<ul>
 <li>Comic Book Tattoo: "Mr. Zebra"
 </ul>
 Orc Stain<ul>
-<li>Orc Stain Volume 1
+<li><a href="../OrcStain/OrcStain.html">Orc Stain</a>
 <li>Tokyopop Presents: King City #7: "Power Plant" collected in King City
 <li>Prophet #39: "Diehard"
 </ul>
