--- a/kb.html
+++ b/kb.html
@@ -7406,6 +7406,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>King City</td>
+<td>1980</td>
+<td>Tokyopop</td>
+<td><a href="KingCity/KingCity.html">Details</a></td>
+</tr>
+
+<tr>
 <td>King Conan</td>
 <td>1980</td>
 <td>Marvel</td>
@@ -9832,6 +9839,13 @@ Creative Knowledgebase<br>
 <td>2004</td>
 <td>Vertigo</td>
 <td><a href="Orbiter/Orbiter.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Orc Stain</td>
+<td>2010</td>
+<td>Image</td>
+<td><a href="OrcStain/OrcStain.html">Details</a></td>
 </tr>
 
 <tr>
